# wheel-maker-tool

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  ReadMe.txt  main.cpp
.github/workflows/: ci.yml  ubuntu-ci.yml
cmake/: build_props.cmake  library_FreeImage.cmake
